...
                maxValue = 25,
                progressBackgroundColor = Color.LightGray,
                progressIndicatorColor = Color.Gray,
                completedColor = Color.Green,
                isClickable = true,
                onClick = { onCourseChosen("jawa") },
                modifier = Modifier.testTag("progress_jawa")
            )
            ProgressCard(
                title = "Belajar Aksara Sunda",
                currentValue = 15,
                maxValue = 25,
                progressBackgroundColor = Color.LightGray,
...
