...
            question = "꧋ꦒꦺꦴꦫꦺꦔꦤꦺꦮꦶꦱ꧀ꦥꦣꦩꦼꦊꦩ꧀ꦥꦼꦩ꧀ꦏꦧꦺꦃ꧉\n" +
                    "Wacane tulisan Jawa ing dhuwur yaiku…..",
            options = mapOf(
                'a' to "Gorengane wis melempem kabeh",
                'b' to "Gorengane minyake akeh",
                'c' to "Gorengane rasane enak kabeh",
                'd' to "Gorengane renane akeh"
            ),
            correctAnswer = 'a'
            ),
        QuizModel(
            question = "꧋ ꦧꦸꦏꦸꦤꦺꦫꦤꦶꦲꦶꦭꦁꦮꦶꦮꦶꦠ꧀ꦮꦶꦔꦶ꧉\n" +
                    "Wacane tulisan Jawa ing dhuwur yaiku…..",
...
